Closed Bug 372475 Opened 17 years ago Closed 17 years ago

"ASSERTION: Popup containing block is missing" with -moz-popup in HTML

Categories

(Core :: XUL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files, 1 obsolete file)

Attached file testcase
Loading this assertion triggers:

###!!! ASSERTION: Popup containing block is missing: 'Error', file /Users/jruderman/trunk/mozilla/layout/base/nsCSSFrameConstructor.cpp, line 5992

This assertion was just added in bug 344340.
Attached patch Like so? (obsolete) — Splinter Review
At the point of the assertion we have:

(gdb) p nsIRootBox::GetRootBox(mPresShell)
$1 = (nsIRootBox *) 0x0
OS: Mac OS X → All
Hardware: PC → All
Attached patch fixSplinter Review
We didn't create a frame for the <div> before either so it's
just a matter of an over-sensitive assert.
Assignee: nobody → mats.palmgren
Attachment #257118 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #257119 - Flags: superreview?(bzbarsky)
Attachment #257119 - Flags: review?(bzbarsky)
Comment on attachment 257119 [details] [diff] [review]
fix

Ah, indeed.  r+sr=bzbarsky
Attachment #257119 - Flags: superreview?(bzbarsky)
Attachment #257119 - Flags: superreview+
Attachment #257119 - Flags: review?(bzbarsky)
Attachment #257119 - Flags: review+
Checked in to trunk at 2007-03-04 15:05 PST.

-> FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Crashtest checked in.
Flags: in-testsuite+
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: xptoolkit.xul → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: