[DEBUG only] Fix an over-sensitive assertion. b=372475 r+sr=bzbarsky